--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,14 @@
-root = true  ; top-most EditorConfig file
-
-; Unix-style newlines with a newline ending every file
-[*.yml]
-charset = utf-8
-end_of_line = lf
-indent_style = space
-indent_size = 2
-
 [*]
-charset = utf-8
-end_of_line = lf
-indent_style = tab
-insert_final_newline = true
-trim_trailing_whitespace = true
+charset=utf-8
+end_of_line=lf
+insert_final_newline=false
+indent_style=tab
+indent_size=4
+
+[*.yml]
+indent_style=space
+indent_size=2
+
+[{.babelrc,.stylelintrc,jest.config,.eslintrc,*.bowerrc,*.jsb3,*.jsb2,*.json,*.css}]
+indent_style=tab
+indent_size=2
