--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,21 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "ES5",
+		"target": "es6",
 		"outDir": "out",
 		"sourceMap": true,
 		"strict": true,
-		"types" : ["node","lodash","mocha"],
+		"types": [
+			"node",
+			"lodash",
+			"mocha"
+		],
 		"lib": [
-			"es2015",
-			"es2015.promise"
+			"es6"
 		]
 	},
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		".vscode-test"
 	]
 }
