--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "serverless-command",
 	"displayName": "Serverless command",
-	"description": "serverless-vscode 를 활용하여 기능확장",
+	"description": "Serverless Framework 을 VSCode에서 손쉽게 실행할수 있으며, 명령줄이 아닌, Context Menu를 이용하여 직관적이며 편리하게 이용할수 있다.",
 	"icon": "images/icon.png",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"publisher": "blaxk",
 	"author": "blaxk",
 	"engines": {
@@ -187,31 +187,31 @@
 					"group": "Serverless@1"
 				}
 			]
-		}
-	},
-	"configuration": {
-		"type": "object",
-		"title": "Serverless Configuration",
-		"properties": {
-			"serverless.aws.defaultStage": {
-				"type": "string",
-				"default": "dev",
-				"description": "Default stage for builds and deployments"
-			},
-			"serverless.aws.defaultRegion": {
-				"type": "string",
-				"default": "ap-northeast-2",
-				"description": "Default region for builds and deployments"
-			},
-			"serverless.defaultNodeModulesPath": {
-				"type": "string",
-				"default": "/usr/local/lib/node_modules",
-				"description": "node_modules 경로를 설정 ('npm root -g' 명령어로 확인 가능)"
-			},
-			"serverless.aws.credentials": {
-				"type": "string",
-				"default": "default",
-				"description": "AWS credentials 별칭을 별도로 설정시 사용 (~/.aws/credentials 파일의 등록되어 있는 정보)"
+		},
+		"configuration": {
+			"type": "object",
+			"title": "Serverless Configuration",
+			"properties": {
+				"serverless.aws.defaultStage": {
+					"type": "string",
+					"default": "dev",
+					"description": "Default stage for builds and deployments"
+				},
+				"serverless.aws.defaultRegion": {
+					"type": "string",
+					"default": "ap-northeast-2",
+					"description": "Default region for builds and deployments"
+				},
+				"serverless.defaultNodeModulesPath": {
+					"type": "string",
+					"default": "/usr/local/lib/node_modules",
+					"description": "node_modules 경로를 설정 ('npm root -g' 명령어로 확인 가능)"
+				},
+				"serverless.aws.credentials": {
+					"type": "string",
+					"default": "default",
+					"description": "AWS credentials 별칭을 별도로 설정시 사용 (~/.aws/credentials 파일의 등록되어 있는 정보)"
+				}
 			}
 		}
 	},
