--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "serverless-command",
 	"displayName": "Serverless command",
-	"description": "Serverless Framework 을 VSCode에서 손쉽게 실행할수 있으며, 명령줄이 아닌, Context Menu를 이용하여 직관적이며 편리하게 이용할수 있다.",
+	"description": "Serverless Framework을 TreeView를 이용하여 직관적이며 편리하게 이용할수 있다.",
 	"icon": "images/icon.png",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"publisher": "blaxk",
 	"author": "blaxk",
 	"engines": {
