--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "serverlessCommand",
+	"name": "serverless-command",
 	"displayName": "Serverless command",
 	"description": "Serverless Framework을 TreeView를 이용하여 직관적이며 편리하게 실행할 수 있습니다.",
 	"icon": "images/icon.png",
