--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Serverless command",
 	"description": "Serverless Framework을 TreeView를 이용하여 직관적이며 편리하게 실행할 수 있습니다.",
 	"icon": "images/icon.png",
-	"version": "1.3.3",
+	"version": "1.4.0",
 	"publisher": "blaxk",
 	"author": "blaxk",
 	"engines": {
@@ -194,6 +194,11 @@
 			"type": "object",
 			"title": "Serverless Command",
 			"properties": {
+				"serverlessCommand.firstCommand": {
+					"type": "string",
+					"default": "",
+					"description": "serverless 명령어 앞쪽에 추가로 설정하는 명령어 설정 (npm start &&)"
+				},
 				"serverlessCommand.aws.stage": {
 					"type": "string",
 					"default": "dev",
@@ -203,11 +208,6 @@
 					"type": "string",
 					"default": "ap-northeast-2",
 					"description": "Default region for builds and deployments"
-				},
-				"serverlessCommand.nodeModulesPath": {
-					"type": "string",
-					"default": "/usr/local/lib/node_modules",
-					"description": "node_modules 경로를 설정 ('npm root -g' 명령어로 확인 가능)"
 				},
 				"serverlessCommand.aws.credentials": {
 					"type": "string",
@@ -229,26 +229,15 @@
 		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/chai": "^4.0.10",
-		"@types/chai-as-promised": "^7.1.0",
-		"@types/js-yaml": "^3.12.1",
-		"@types/lodash": "^4.14.149",
-		"@types/mocha": "^2.2.44",
-		"@types/node": "^12.12.17",
-		"@types/sinon": "^4.1.2",
-		"@types/sinon-chai": "^2.7.29",
-		"@types/vscode": "^1.31.0",
-		"chai": "^4.1.2",
-		"chai-as-promised": "^7.1.1",
-		"mocha": "^4.0.1",
-		"sinon": "^4.1.3",
-		"sinon-chai": "^2.14.0",
-		"tslint": "^5.8.0",
-		"typescript": "^3.7.3"
+		"@types/js-yaml": "^4.0.0",
+		"@types/lodash": "^4.14.168",
+		"@types/node": "^12.20.10",
+		"@types/vscode": "^1.55.0",
+		"tslint": "^6.1.3",
+		"typescript": "^4.2.4"
 	},
 	"dependencies": {
-		"js-yaml": "^3.13.1",
-		"jsonc-parser": "^2.2.0",
-		"lodash": "^4.14.149"
+		"js-yaml": "^4.1.0",
+		"lodash": "^4.17.21"
 	}
 }
