CloudWatchLogs html parsing 개선 및 sorting 기능 추가

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,12 @@
 .vscode/**
 .github/**
+.gitignore
+.editorconfig
 typings/**
-out/test/**
+build/test/**
 test/**
 **/*.ts
-**/*.map
-.gitignore
 tsconfig.json
+tsconfig.extension.json
 .vscode-test/**
+src/**
