--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Serverless command",
 	"description": "Serverless Framework을 TreeView를 이용하여 직관적이며 편리하게 개발할 수 있도록 도와줍니다.",
 	"icon": "resources/icon.png",
-	"version": "1.5.0",
+	"version": "1.5.1",
 	"publisher": "blaxk",
 	"author": "blaxk",
 	"engines": {
@@ -274,6 +274,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@fortawesome/react-fontawesome": "^0.1.14",
 		"dayjs": "^1.10.6",
+		"html-entities": "^2.3.2",
 		"js-yaml": "^4.1.0",
 		"lodash": "^4.17.21",
 		"react": "^17.0.2",
