--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Serverless command",
 	"description": "Serverless Framework을 TreeView를 이용하여 직관적이며 편리하게 개발할 수 있도록 도와줍니다.",
 	"icon": "resources/icon.png",
-	"version": "1.5.1",
+	"version": "1.5.2",
 	"publisher": "blaxk",
 	"author": "blaxk",
 	"engines": {
@@ -234,6 +234,11 @@
 					"default": "",
 					"description": "serverless 명령어 앞쪽에 추가로 설정하는 명령어 설정 (npm start &&)"
 				},
+				"serverlessCommand.testFolderPath": {
+					"type": "string",
+					"default": "./test",
+					"description": "Invoke function 실행시 참조되는 <functionName>.json 파일의 상위 폴더경로 설정"
+				},
 				"serverlessCommand.aws.stage": {
 					"type": "string",
 					"default": "dev",
@@ -270,27 +275,26 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-cloudwatch-logs": "^3.23.0",
+		"js-yaml": "^4.1.0",
+		"lodash": "^4.17.21"
+	},
+	"devDependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.35",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@fortawesome/react-fontawesome": "^0.1.14",
-		"dayjs": "^1.10.6",
-		"html-entities": "^2.3.2",
-		"js-yaml": "^4.1.0",
-		"lodash": "^4.17.21",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-router-dom": "^5.2.0",
-		"regex-parser": "^2.2.11"
-	},
-	"devDependencies": {
 		"@types/js-yaml": "^4.0.2",
 		"@types/lodash": "^4.14.171",
 		"@types/node": "^12.20.15",
-		"@types/react": "^17.0.15",
-		"@types/react-dom": "^17.0.9",
-		"@types/react-router-dom": "^5.1.8",
 		"@types/vscode": "^1.58.1",
+		"dayjs": "^1.10.6",
+		"html-entities": "^2.3.2",
+		"is-json": "^2.0.1",
+		"json-format": "^1.0.1",
 		"nodemon": "^2.0.12",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^5.2.0",
+		"regex-parser": "^2.2.11",
 		"react-scripts": "4.0.3",
 		"tslint": "^6.1.3",
 		"typescript": "^4.3.5"
