--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "serverless-command",
 	"displayName": "Serverless command",
-	"description": "Serverless Framework을 TreeView를 이용하여 직관적이며 편리하게 개발할 수 있도록 도와줍니다.",
+	"description": "Serverless Framework can be easily executed in VSCode, and using TreeView helps intuitive and convenient development.",
 	"icon": "resources/icon.png",
-	"version": "1.5.3",
+	"version": "1.5.4",
 	"publisher": "blaxk",
 	"author": "blaxk",
 	"engines": {
@@ -232,12 +232,12 @@
 				"serverlessCommand.firstCommand": {
 					"type": "string",
 					"default": "",
-					"description": "serverless 명령어 앞쪽에 추가로 설정하는 명령어 설정 (npm start &&)"
+					"description": "Command setting that is additionally set before the serverless command"
 				},
 				"serverlessCommand.testFolderPath": {
 					"type": "string",
 					"default": "./test",
-					"description": "Invoke function 실행시 참조되는 <functionName>.json 파일의 상위 폴더경로 설정"
+					"description": "Set the parent folder path of the <functionName>.json file referenced when executing `Invoke function`"
 				},
 				"serverlessCommand.aws.stage": {
 					"type": "string",
@@ -252,12 +252,12 @@
 				"serverlessCommand.aws.credentials": {
 					"type": "string",
 					"default": "",
-					"description": "AWS credentials profile 별칭을 별도로 설정시 사용 (~/.aws/credentials 파일의 등록되어 있는 정보)"
+					"description": "Setting When Using AWS Credential Profile Alias"
 				},
 				"serverlessCommand.aws.alias": {
 					"type": "string",
 					"default": "",
-					"description": "Lambda 함수에서 alias를 사용할 수 있도록 설정"
+					"description": "Set AWS Alias Available to Lambda Functions"
 				}
 			}
 		}
